# qt-app

./: .gitignore  .gitmodules  README.md  form.djinni  form2.djinni  portal.djinni  qtdtapp.pro  qtdtapp.vcxproj  run_djinni.sh
ide/androidstudio/: deployment_cert.der  keystore_hans.jks
ide/androidstudio/app/: CMakeLists.txt  build.gradle
ide/androidstudio/app/src/androidTest/java/net/ai/tmp/cloudstore/: ExampleInstrumentedTest.java
ide/androidstudio/app/src/main/: AndroidManifest.xml
ide/androidstudio/app/src/main/cpp/: native-lib.cpp
ide/androidstudio/app/src/main/res/layout/: activity_container.xml  activity_preview.xml  directory_frag.xml  directory_item.xml  image_preview.xml  text_preview.xml
ide/androidstudio/app/src/main/res/menu/: preview.xml
ide/androidstudio/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
ide/androidstudio/app/src/test/java/net/ai/tmp/cloudstore/: ExampleUnitTest.java
installer/: .gitignore  Release.0.6.4.txt  notas.txt
installer/config/: config.xml  installericon.icns
src/: ai_http.h  bridge.h  byteswap.h  caching_engine.cpp  caching_engine.h  directory.cpp  directory.h  endian.h  general.h  json.h  lookup_field.h  lsb.h  mylog.h  pack.h  pkzip.h  text_field.h  text_map.h  zz_algorithms.h
src/gui/: about_form.h  confirm_form.h  login_form.h
src/model/: custom_platform.h  directory_notification.h  model.cpp  model.h  services.h
src/openstack/: list_parser.h  object_detail.h  openstack.cpp  openstack.h
src/platform/: blomp_session.cpp  blomp_session.h  content.cpp  content.h  device_platform.h  plat.h  (+7 more)
(+679 files in other folders)
